[workspace]
members = [
    "cli",
    "service",
    "app/api",
    "app/admin",
    "app/merchant",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# web server require
axum = { version = "0.6", default-features = false, features = ["headers", "matched-path"] }
axum-auth = { version = "0.4", features = ["auth-bearer"] }
# async require
tokio = { version = "1.17", default-features = false, features = ["macros", "rt-multi-thread"] }
# log require
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "time", "local-time", "fmt"] }
console-subscriber = { version = "0.1.8", default-features = false, features = ["env-filter"] }
time = { version = "0.3", default-features = false, features=["macros"] }
# swagger require
utoipa = { version = "3.1", default-features = false, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1", default-features = false, features = ["axum"] }
# json require
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
# captcha require
captcha-rs = { version = "0.2" }
# jwt require
jsonwebtoken = { version = "8.3" }
# static file require
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-http = { version = "0.4", default-features = false, features = ["fs", "trace"] }
# orm require
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7", default-features = false, features = ["sqlite"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7", default-features = false, features = ["sqlite"] }

custom_attrs = "1.4"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = 'abort'
