[workspace]
members = [
    "app/admin",
    "app/api",
    "app/cli",
    "app/merchant",
    "prisma/prisma_cli",
    "service",
    "utils",
]
default-members = ["app/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# web server require
axum = { version = "0.6.18", default-features = false, features = ["headers", "matched-path", "form", "ws", "tracing", "query", "json"] }
axum-macros = { version = "0.3" }
axum-extra = { version = "0.7", features = ["query"] }
# async require
tokio = { version = "1.17", default-features = false, features = ["macros", "rt-multi-thread"] }
# log require
tracing = { version = "0.1" }
tracing-appender = { version="0.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "time", "local-time", "fmt", "registry", "std"] }
console-subscriber = { version = "0.1.8", default-features = false, features = ["env-filter"] }
chrono = { version = "0.4" }
time = { version = "0.3", default-features = false, features = ["macros"] }
# json require
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1" }
serde_with = { version = "3.0" }
# captcha require
captcha-rs = { version = "0.2" }
# jwt require
jsonwebtoken = { version = "8.3" }
# static file require
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-http = { version = "0.4", default-features = false, features = ["fs", "trace"] }
# orm require
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev="113b48d", default-features = false, features = ["sqlite", "sqlite-create-many"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", rev="113b48d", default-features = false, features = ["sqlite", "sqlite-create-many"] }
# error code require
custom_attrs = "1.4"
thiserror = "1.0"
# request params validator require
validator = { version = "0.16", features = ["derive"] }
# password encode require
argon2 = { version = "0.5" }
password-hash = { version = "0.5", default-features = false, features = ["alloc", "rand_core"] }
# cli require
clap = { version = "4.2", features = ["derive"] }
# async function recursion require
async-recursion = "1.0"
# generate rand number require
fastrand = "2.0.0"


[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = 'abort'
