[workspace]
members = [
    "app/admin",
    "app/api",
    "app/cli",
    "app/prisma_cli",
    "app/merchant",
    "config",
    "model",
    "service",
    "utils",
]
# default-members = ["app/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[workspace.dependencies]
# web server require
axum = { version = "0.7.1", default-features = false, features = [
    "matched-path",
    "form",
    "ws",
    "tracing",
    "query",
    "json",
    "tokio",
    "http1",
] }
axum-macros = { version = "0.4" }
axum-extra = { version = "0.9", features = ["query"] }
# async require
tokio = { version = "1.34", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
# log require
tracing = { version = "0.1" }
tracing-appender = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "time",
    "local-time",
    "fmt",
    "registry",
    "std",
] }
console-subscriber = { version = "0.2", default-features = false, features = [
    "env-filter",
] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", default-features = false, features = ["macros"] }
# json require
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1" }
serde_with = { version = "3.0" }
# captcha require
captcha-rs = { version = "0.2" }
# jwt require
jsonwebtoken = { version = "9.1" }
# static file require
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-http = { version = "0.5", default-features = false, features = [
    "fs",
    "trace",
] }
# orm require
diesel = { version = "2.1.4", features = ["postgres_backend", "chrono"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
# sqlite: features = ["sqlite", "sqlite-create-many"]
# mysql: features = ["mysql"]
# postgres: features = ["postgresql"]
# mssql: features = ["mssql"]
# mongodb: features = ["mongodb"]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "postgresql",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "postgresql",
] }
# error code require
custom_attrs = "1.6"
thiserror = "1.0"
# struc get set
getset = "0.1"
# request params validator require
validator = { version = "0.16", features = ["derive"] }
# password encode require
argon2 = { version = "0.5" }
password-hash = { version = "0.5", default-features = false, features = [
    "alloc",
    "rand_core",
] }
# cli require
clap = { version = "4.4", features = ["derive"] }
# async function recursion require
async-recursion = "1.0"
# generate rand number require
fastrand = "2.0"
# async trait require
async-trait = "0.1"
# smtp client require
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls",
    "builder",
] }
# big decimal require
bigdecimal = { version = "0.3", features = ["serde"] }
dotenvy = { version = "0.15.0" }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = 'abort'
