[package]
name = "model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
getset = { workspace = true }
utils = { path = "../utils", features = ["tree"] }
