[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# custom_attrs = { workspace = true }
prisma-client-rust = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
