[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
async-recursion = { workspace = true }
fastrand = { workspace = true }
async-trait = { workspace = true }
getset = { workspace = true }
model = { path = "../model" }
utils = { path = "../utils", features = ["paginate", "tree", "datetime"] }
