[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captcha-rs = { workspace = true, optional = true }
time = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
password-hash = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
validator = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
captcha = ["dep:captcha-rs", "datetime"]
extract = ["dep:axum", "dep:serde", "dep:thiserror", "dep:validator"]
jwt = ["dep:jsonwebtoken", "dep:serde", "datetime"]
password = ["dep:argon2", "dep:password-hash"]
paginate = ["dep:serde", "dep:serde_with"]
tree = []
datetime = ["dep:chrono"]
logger=["dep:time", "dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
