[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-auth = { workspace = true }
# async require (tokio debug add feature: tracing)
tokio = { workspace = true }
# log require (tokio debug add feature(registry) to tracing-subscriber)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# time require
time = { workspace = true }
# swagger require
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
# json require
serde = { workspace = true }
serde_json = { workspace = true }
# captcha require
captcha-rs = { workspace = true }
# jwt require
jsonwebtoken = { workspace = true }
# static file require
# tower = { workspace = true }
# tower-http = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
custom_attrs = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }

service = { path = "../../service" }
