[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { workspace = true }
axum = { workspace = true }
axum-auth = { workspace = true }
axum-macros = { workspace = true }
captcha-rs = { workspace = true }
custom_attrs = { workspace = true }
jsonwebtoken = { workspace = true }
password-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service = { path = "../../service" }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
# tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
validator = { workspace = true }

[build-dependencies]
fs_extra = "1.3"
