[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-macros = { workspace = true }
axum-extra = { workspace = true }
custom_attrs = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
# tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
utils = { path = "../../utils", features=["captcha", "extract", "jwt", "password", "logger", "datetime"] }
service = { path = "../../service" }

[build-dependencies]
fs_extra = "1.3"
