[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
lettre = { workspace = true }
tracing = { workspace = true }
utils = { path = "../../utils", features=["logger"] }