[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = { workspace = true }
clap = { workspace = true }
fs_extra = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
service = { path = "../../service" }
tokio = { workspace = true }
utils = { path = "../../utils", features=["tree"] }
